FIXED BUG + AUTO SCROLL WHEN ADDING AN EXTENSION RULE